# get_ping

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
get_ping/: main.py
